crates/hook/src/bindings.rs

/* automatically generated by rust-bindgen 0.72.0 */

pub type gint = ::core::ffi::c_int;
pub type guint = ::core::ffi::c_uint;
pub type gpointer = *mut ::core::ffi::c_void;
pub const GumRelocationPolicy_GUM_RELOCATION_DEFAULT: GumRelocationPolicy = 0;
pub const GumRelocationPolicy_GUM_RELOCATION_CHECKED: GumRelocationPolicy = 1;
pub const GumRelocationPolicy_GUM_RELOCATION_UNCHECKED: GumRelocationPolicy = 2;
pub const GumRelocationPolicy_GUM_RELOCATION_FORCED: GumRelocationPolicy = 3;
pub type GumRelocationPolicy = ::core::ffi::c_int;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _GumInterceptor {
    _unused: [u8; 0],
}
pub type GumInterceptor = _GumInterceptor;
pub const GumInterceptorScenario_GUM_INTERCEPTOR_SCENARIO_DEFAULT: GumInterceptorScenario = 0;
pub const GumInterceptorScenario_GUM_INTERCEPTOR_SCENARIO_ONLINE: GumInterceptorScenario = 1;
pub const GumInterceptorScenario_GUM_INTERCEPTOR_SCENARIO_OFFLINE: GumInterceptorScenario = 2;
pub type GumInterceptorScenario = ::core::ffi::c_int;
pub const _GumRedirectWriteResult_GUM_REDIRECT_WRITTEN: _GumRedirectWriteResult = 0;
pub const _GumRedirectWriteResult_GUM_REDIRECT_DECLINED: _GumRedirectWriteResult = 1;
pub type _GumRedirectWriteResult = ::core::ffi::c_int;
pub use self::_GumRedirectWriteResult as GumRedirectWriteResult;
pub type GumInterceptorOptions = _GumInterceptorOptions;
pub type GumRedirectWriteDetails = _GumRedirectWriteDetails;
pub type GumWriteRedirectFunc = ::core::option::Option<
    unsafe extern "C" fn(
        details: *const GumRedirectWriteDetails,
        user_data: gpointer,
    ) -> GumRedirectWriteResult,
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _GumInterceptorOptions {
    pub scratch_register: gint,
    pub scenario: GumInterceptorScenario,
    pub relocation_policy: GumRelocationPolicy,
    pub write_redirect: GumWriteRedirectFunc,
    pub write_redirect_data: gpointer,
    pub redirect_space_hint: guint,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _GumRedirectWriteDetails {
    pub writer: gpointer,
    pub target: gpointer,
    pub scratch_register: gint,
    pub capacity: guint,
}
pub const GumReplaceReturn_GUM_REPLACE_OK: GumReplaceReturn = 0;
pub const GumReplaceReturn_GUM_REPLACE_WRONG_SIGNATURE: GumReplaceReturn = -1;
pub const GumReplaceReturn_GUM_REPLACE_ALREADY_REPLACED: GumReplaceReturn = -2;
pub const GumReplaceReturn_GUM_REPLACE_POLICY_VIOLATION: GumReplaceReturn = -3;
pub const GumReplaceReturn_GUM_REPLACE_WRONG_TYPE: GumReplaceReturn = -4;
pub type GumReplaceReturn = ::core::ffi::c_int;
unsafe extern "C" {
    pub fn gum_bindings_init();
}
unsafe extern "C" {
    pub fn gum_bindings_interceptor_obtain() -> *mut GumInterceptor;
}
unsafe extern "C" {
    pub fn gum_bindings_interceptor_replace_fast(
        self_: *mut GumInterceptor,
        function_address: gpointer,
        replacement_function: gpointer,
        original_function: *mut gpointer,
        options: *const GumInterceptorOptions,
    ) -> GumReplaceReturn;
}
unsafe extern "C" {
    pub fn gum_bindings_interceptor_begin_transaction(self_: *mut GumInterceptor);
}
unsafe extern "C" {
    pub fn gum_bindings_interceptor_end_transaction(self_: *mut GumInterceptor);
}
